# rats-rs

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  justfile
.github/workflows/: build-and-publish-dev-img.yml  build-and-test.yaml
c-api/: CMakeLists.txt  Cargo.toml  README.md  build.rs  cbindgen.toml
c-api/cmake/: RatsRsConfig.cmake.in
c-api/include/: rats-rs.h
c-api/src/: cert_api.rs  errors.rs  lib.rs  log.rs  mem.rs  types.rs
docs/: architecture-of-the-project.md  core-design-of-cpu-spdm.md  demo-sgx-cert.pem  how-to-build.md  how-to-run-test.md
examples/: spdm.rs
examples/cert-app/: CMakeLists.txt  README.md  app.c  helper.c  main.c
examples/cert-app/include/: common.h
examples/openssl-hook/: Cargo.toml
examples/openssl-hook/src/: lib.rs
examples/openssl_hook/: Cargo.toml  README.md
examples/rustls/: Cargo.toml
examples/rustls/src/: main.rs  rustls.rs
examples/rustls/src/echo/: mod.rs
examples/spdm/: Cargo.toml  README.md  echo.rs  main.rs  nginx.conf  spdm.rs  tunnel.rs
examples/spdm/tunnel/: mod.rs
examples/tls/: Cargo.toml
examples/tls/src/: main.rs  tls.rs
examples/tls/src/echo/: mod.rs
intel-dcap/: Cargo.toml  build.rs
intel-dcap/src/: lib.rs
rats-cert/: Cargo.toml
rats-cert/src/: errors.rs  lib.rs
rats-cert/src/cert/dice/: mod.rs
rats-cert/src/crypto/: mod.rs
rats-cert/src/tee/coco/: mod.rs
rats-cert/src/tee/coco/protos/: attestation-agent.proto  attestation-service.proto
rats-cert/src/tee/coco/ttrpc_protocol/: attestation_agent_ttrpc.rs
rats-cert/src/tee/sgx_dcap/: attester.rs  claims.rs  evidence.rs
rats-cert/src/tee/tdx/: evidence.rs  verifier.rs
rats-rs/: Cargo.toml  build.rs
rats-rs/src/: errors.rs  lib.rs
rats-rs/src/cert/: create.rs  verify.rs
rats-rs/src/cert/dice/: cbor.rs  extensions.rs  mod.rs
rats-rs/src/crypto/: mod.rs
rats-rs/src/tee/: auto.rs  claims.rs  mod.rs
rats-rs/src/tee/coco/: attester.rs  converter.rs  evidence.rs  mod.rs  verifier.rs
rats-rs/src/tee/coco/converter/: grpc.rs  mod.rs  restful.rs
rats-rs/src/tee/coco/protos/: attestation-agent.proto  attestation-service.proto
rats-rs/src/tee/coco/ttrpc_protocol/: attestation_agent.rs  attestation_agent_ttrpc.rs
rats-rs/src/tee/sgx_dcap/: attester.rs  claims.rs  evidence.rs  mod.rs  verifier.rs
rats-rs/src/tee/tdx/: attester.rs  claims.rs  evidence.rs  mod.rs  verifier.rs
rats-rs/src/transport/: mod.rs
rats-rs/src/transport/rustls/: client.rs  mod.rs  server.rs
rats-rs/src/transport/spdm/: half.rs  requester.rs  responder.rs
rats-rs/src/transport/spdm/secret/: asym_crypto.rs  cert_provider.rs  cert_validation.rs  measurement.rs
rats-rs/src/transport/tls/: client.rs  mod.rs  server.rs
rats-transport/: Cargo.toml
rats-transport/examples/spdm/: Cargo.toml  README.md
rats-transport/examples/spdm/src/: spdm.rs
rats-transport/examples/spdm/src/echo/: mod.rs
rats-transport/examples/spdm/src/tunnel/: mod.rs
rats-transport/src/: lib.rs
rats-transport/src/spdm/: half.rs  requester.rs  responder.rs  transport.rs
rats-transport/src/spdm/io/: mod.rs
rats-transport/src/spdm/secret/: asym_crypto.rs  cert_provider.rs  cert_validation.rs  measurement.rs
scripts/: run_exe_in_occlum.sh
src/: claims.rs  errors.rs  lib.rs
src/attester/: mod.rs
src/attester/sgx_dcap/: mod.rs
src/cert/: create.rs  mod.rs  verify.rs
src/cert/dice/: cbor.rs  element.rs  fields.rs  mod.rs
src/crypto/: mod.rs
src/tee/: claims.rs  mod.rs
src/tee/sgx_dcap/: attester.rs  claims.rs  evidence.rs  mod.rs  verifier.rs
src/tee/sgx_dcap/verifier/: claims.rs  mod.rs
src/tee/tdx/: attester.rs  claims.rs  evidence.rs
src/transport/: mod.rs
src/transport/spdm/: crypto_callback.rs  io.rs  mod.rs  requester.rs  responder.rs  secret_impl_sample.rs  transport.rs
src/transport/spdm/io/: framed_stream.rs
src/transport/spdm/secret/: asym_crypto.rs  cert.rs  cert_provider.rs  cert_validation.rs  measurement.rs  mod.rs
src/transport/spdm/spdm_requester_emu/: mod.rs
src/transport/spdm/spdm_responder_emu/: mod.rs
src/verifier/: mod.rs
src/verifier/sgx_dcap/: claims.rs  mod.rs
