[workspace]
members = [
    "rats-rs",
    "c-api",
    "intel-dcap",
    "examples/spdm"
]
default-members = [
    "rats-rs",
    "c-api",
    "examples/spdm",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
readme = "README.md"
license = "Apache-2.0"

[workspace.dependencies]
codec = {git = "https://github.com/ccc-spdm-tools/spdm-rs", branch = "main", features = ["alloc"]}
spdmlib = {git = "https://github.com/ccc-spdm-tools/spdm-rs", branch = "main", features = ["spdm-ring", "hashed-transcript-data", "downcast"]}
ring = "0.17.6"
spin = "0.9.8"
anyhow = "1.0.81"
log = "0.4.20"
env_logger = {version = "0.11.2", features = ["auto-color", "humantime", "regex"]}
zeroize = "1.7.0"

[patch."https://github.com/ccc-spdm-tools/spdm-rs"]
codec = {path = 'deps/spdm-rs/codec'}
spdmlib = {path = 'deps/spdm-rs/spdmlib'}

# copy from Cargo.toml of spdm-rs
[patch.crates-io]
mbedtls-platform-support = {path = "deps/spdm-rs/spdmlib_crypto_mbedtls/mbedtls-platform-support"}
ring = {path = "deps/spdm-rs/external/ring"}
webpki = {path = "deps/spdm-rs/external/webpki"}
