[workspace]
default-members = [
  "rats-cert",
  "c-api",
]
exclude = [
  "rats-transport",
]
members = [
  "rats-cert",
  "c-api",
  "intel-dcap",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.81"
env_logger = {version = "0.11.2", features = ["auto-color", "humantime", "regex"]}
log = "0.4.20"
ring = "0.17.6"
spin = "0.9.8"
zeroize = "1.7.0"
