[package]
name = "c-api"
description = "C API exported by rats-rs"
authors = ["Kun Lai <me@imlk.top>"]
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rats-rs = {path = "../rats-rs", default-features = false, features = ["crypto-rustcrypto", "is-sync"]}
zeroize = {workspace = true}
ctor = "0.2.8"
env_logger = {workspace = true}
log = {workspace = true}
shadow-rs = "=0.20.1"

[build-dependencies]
cbindgen = "0.24.0"
shadow-rs = "=0.20.1"

[features]
default = ["local", "coco"]
local = ["rats-rs/all-attesters", "rats-rs/all-verifiers"]
coco = ["rats-rs/coco"]

[lib]
name = "rats_rs"
crate-type = ["cdylib", "staticlib"]

