[package]
authors = ["Kun Lai <me@imlk.top>"]
edition = "2021"
license = "Apache-2.0"
name = "rats-transport"
version = "0.1.0"

[workspace]
default-members = [
  ".",
  "examples/spdm",
]
members = [
  ".",
  "examples/spdm",
]

[dependencies]
anyhow = "1.0.81"
async-trait = "0.1.77"
bitflags = "2.5.0"
codec = {git = "https://github.com/ccc-spdm-tools/spdm-rs", branch = "main", features = ["alloc"], optional = true}
env_logger = {version = "0.11.2", features = ["auto-color", "humantime", "regex"]}
hex = "0.4.3"
itertools = "0.12.1"
log = "0.4.20"
maybe-async = "0.2.7"
p256 = {version = "0.13.2"}
pkcs8 = {version = "0.10.2", features = ["pem"]}
rand = "0.8.5"
rats-cert = {path = "../rats-cert"}
ring = {ring = "0.17.6", optional = true}
rsa = {version = "0.9.6", features = ["sha2"]}
sha2 = {version = "0.10.8", features = ["oid"]}
signature = {version = "2.2.0"}
spdmlib = {git = "https://github.com/ccc-spdm-tools/spdm-rs", branch = "main", features = ["spdm-ring", "hashed-transcript-data", "downcast"], optional = true}
spin = "0.9.8"
tokio = {version = "1.36.0", features = ["full"], optional = true}
webpki = {version = "0.22.4", optional = true, features = ["alloc", "std"]}
x509-cert = {version = "0.2.5", features = ["builder"]}

[features]
async-tokio = ["dep:tokio"]
default = ["transport-spdm", "is-sync"]
is-sync = ["maybe-async/is_sync", "spdmlib?/is_sync"]
transport-spdm = ["dep:spdmlib", "dep:codec", "dep:ring"]

[dev-dependencies]
env_logger = {version = "0.11.2", features = ["auto-color", "humantime", "regex"]}

[patch."https://github.com/ccc-spdm-tools/spdm-rs"]
codec = {path = '../deps/spdm-rs/codec'}
spdmlib = {path = '../deps/spdm-rs/spdmlib'}

# copy from Cargo.toml of spdm-rs
[patch.crates-io]
mbedtls-platform-support = {path = "../deps/spdm-rs/spdmlib_crypto_mbedtls/mbedtls-platform-support"}
ring = {path = "../deps/spdm-rs/external/ring"}
webpki = {path = "../deps/spdm-rs/external/webpki"}
